fix : edit in body overflow

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -18,8 +18,6 @@ body {
   background: #2e2f41 url(../images/background/5.jpg) 0 0 no-repeat;
   background-size: cover;
   background-attachment:fixed;
-  overflow: auto;
-  -webkit-overflow-scrolling:touch;
     
 }
 .app-list{
